--- a/src/main/webapp/inputFrequency.html
+++ b/src/main/webapp/inputFrequency.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Character Frequency Counter</title>
 </head>
 <body>
-$END$
+<h1>Frequency Counter</h1>
+<form action="Countfequency" method="post">
+    <label for="inputString">Enter a string:</label>
+    <input type="text" id="inputString" name="inputString" required>
+    <button type="submit">Count Frequency</button>
+</form>
 </body>
 </html>
