--- a/src/main/webapp/Calculator.html
+++ b/src/main/webapp/Calculator.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
 </head>
 <body>
-$END$
+<h2>Calculator</h2>
+<form action="calculate" method="POST">
+
+    <label for="num1">Number 1:</label>
+    <input type="number" id="num1" name="num1" required>
+    <br><br>
+
+    <label for="num2">Number 2:</label>
+    <input type="number" id="num2" name="num2" required>
+    <br><br>
+
+    <label for="operation">Select Operation:</label>
+
+    <select id="operation" name="operation" required>
+        <option value="add">Addition</option>
+        <option value="subtract">Subtraction</option>
+        <option value="multiply">Multiplication</option>
+        <option value="divide">Division</option>
+    </select>
+
+    <br><br>
+
+    <input type="submit" value="Calculate">
+</form>
 </body>
 </html>
