--- a/src/main/webapp/Palidrome.html
+++ b/src/main/webapp/Palidrome.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Palindrome Checker</title>
 </head>
 <body>
-$END$
+<h1> Palindrome Checker</h1>
+<form action="checkPalindrome" method="post">
+  <input type="text" name="inputString" placeholder="Enter a string" required>
+  <button type="submit">Check</button>
+</form>
 </body>
 </html>
