--- a/src/main/webapp/TemperatureConverter.html
+++ b/src/main/webapp/TemperatureConverter.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Temperature Converter</title>
 </head>
+<h1>Temperature Converter</h1>
+
+<form action="convert" method="post">
+    <input type="text" name="temperature" placeholder="Enter temperature" required>
+    <select name="conversionType" required>
+        <option value="CtoF">Celsius to Fahrenheit</option>
+        <option value="FtoC">Fahrenheit to Celsius</option>
+    </select>
+    <button type="submit">Convert</button>
+</form>
 <body>
-$END$
+
 </body>
 </html>
