--- a/src/main/webapp/fibonacci.html
+++ b/src/main/webapp/fibonacci.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fibonacci Sequence Generator</title>
 </head>
 <body>
-$END$
+<h1>Fibonacci Sequence</h1>
+<form action="generateFibonacci" method="post">
+    <label for="number">Enter a number:</label>
+    <input type="number" id="number" name="number" min="0" required>
+    <button type="submit">Generate</button>
+</form>
 </body>
 </html>
